--- a/tutorial/Zac/Tut1Q1/nbproject/project.properties
+++ b/tutorial/Zac/Tut1Q1/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=tut1q1.Tut1Q1
+main.class=Rectangle.RectangleTest
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
