--- a/tutorial/StevenBrodie/T1Q1/nbproject/project.properties
+++ b/tutorial/StevenBrodie/T1Q1/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=t1q1.T1Q1
+main.class=t1q1.T1Q1Test
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
