--- a/tutorial/steve/2018t2/W5MultipleFrames/nbproject/project.properties
+++ b/tutorial/steve/2018t2/W5MultipleFrames/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=
+main.class=w5multipleframes.BookingFrame
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
